# Strats

./: .dvcignore  .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
common/: __init__.py  io.py
data/: .gitignore
extract/: __init__.py  cache.py  eu_fx.py  eu_macro.py  eu_shorts.py  eu_uncertainty.py  io.py  stock_history.py
metrics/: .gitignore  eu_shorts.json  eu_uncertainty.json
transform/: signatures.py
